<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">Mapen</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="lbl_62">+62</string>
    <string name="msg_don_t_have_an_a">Dont have an account?</string>
    <string name="lbl_telepon">Telepon</string>
    <string name="msg_work_from_home">Work From Home (WFH)</string>
    <string name="lbl_cv_mapen_pdf">CV_Mapen.pdf</string>
    <string name="lbl_waktu_presensi">Waktu Presensi</string>
    <string name="lbl_keahlian">Keahlian</string>
    <string name="msg_already_have_an">Already have an account?</string>
    <string name="lbl_sosial_media">Sosial Media</string>
    <string name="lbl_tabel_presensi2">tabel_presensi</string>
    <string name="lbl_jam_pulang">Jam Pulang</string>
    <string name="lbl_cek_lokasi">Cek Lokasi</string>
    <string name="lbl_new_password">New Password</string>
    <string name="lbl_app_navigation">App Navigation</string>
    <string name="lbl_tabel_kegiatan">Tabel Kegiatan</string>
    <string name="lbl_waktu_presensi2">waktu_presensi</string>
    <string name="msg_membuat_aplikas">Membuat Aplikasi Matematika SD</string>
    <string name="msg_repeat_new_pass">Repeat New Password</string>
    <string name="lbl_sign_in">Sign In</string>
    <string name="lbl_pegawai2">pegawai</string>
    <string name="lbl_status_skp">Status SKP</string>
    <string name="lbl_tabel_skp2">tabel_skp</string>
    <string name="lbl_kode_kegiatan">Kode Kegiatan</string>
    <string name="lbl_ket">Ket</string>
    <string name="msg_belum_mengajukan">Belum Mengajukan Nilai</string>
    <string name="lbl_siang">Siang</string>
    <string name="lbl_didan_hatama4">Didan Hatama</string>
    <string name="lbl_didan_hatama5">Didan Hatama</string>
    <string name="lbl_download_file">Download File</string>
    <string name="lbl_didan_hatama2">Didan Hatama</string>
    <string name="lbl_jam_datang">Jam Datang</string>
    <string name="lbl_didan_hatama3">Didan Hatama</string>
    <string name="lbl_apa_itu_mapen">Apa itu Mapen?</string>
    <string name="lbl_foto">Foto</string>
    <string name="msg_current_passwor">Current Password</string>
    <string name="lbl_change_pass">change_pass</string>
    <string name="msg_uraian_pekerjaa">Uraian Pekerjaan</string>
    <string name="lbl_kontak_kami">Kontak Kami</string>
    <string name="lbl_fullname">Fullname</string>
    <string name="lbl_tambah_form">Tambah</string>
    <string name="lbl_pengajuan_skp">Pengajuan SKP</string>
    <string name="lbl_sudah_selesai">Sudah Selesai</string>
    <string name="lbl_tabel_presensi">Tabel Presensi</string>
    <string name="lbl_validasi">Validasi</string>
    <string name="msg_proposal_aplika">Proposal aplikasi MTK untuk SD</string>
    <string name="lbl_edit_profil2">edit_profil</string>
    <string name="lbl_kegiatan">Kegiatan</string>
    <string name="lbl_2022">2022</string>
    <string name="lbl_unit_kerja">Unit Kerja</string>
    <string name="lbl_unggah_dokumen">Unggah Dokumen</string>
    <string name="msg_didan_hafizpp16">didan.hafizpp16@gmail.com</string>
    <string name="msg_uraian_pekerjaa2">Uraian Pekerjaan</string>
    <string name="lbl_didan_hatama">Didan Hatama</string>
    <string name="msg_check_your_app">"Check your app's UI from the below demo screens of your app."</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_splashscreen">splashscreen</string>
    <string name="msg_09_03_2022_13_5">09-03-2022 13:54:04</string>
    <string name="lbl_tahun">Tahun</string>
    <string name="lbl_bulan_tahun">Bulan dan Tahun</string>
    <string name="lbl_skp">SKP</string>
    <string name="lbl_re_password">Re-password</string>
    <string name="lbl_bulan">Bulan</string>
    <string name="lbl_riwayat">Riwayat</string>
    <string name="lbl_jumlah_kegiatan">Jumlah Kegiatan</string>
    <string name="lbl_pengajuan_skp2">pengajuan_skp</string>
    <string name="lbl_tabel_kegiatan2">tabel_kegiatan</string>
    <string name="msg_jalan_mr_koess">Jalan Mr. Koessoebiyono Tjondro Wibowo</string>
    <string name="lbl_21">21</string>
    <string name="lbl_ambil_foto">Ambil Foto</string>
    <string name="lbl_metode_kerja2">Metode Kerja</string>
    <string name="lbl_log_kegiatan">Log Kegiatan</string>
    <string name="lbl_pegawai">Pegawai</string>
    <string name="msg_09_03_2022_09_1">09-03-2022 09:12:06</string>
    <string name="lbl_kode_kegiatan2">Kode Kegiatan</string>
    <string name="msg_enter_your_biod">Enter your biodata to create a new account.</string>
    <string name="lbl_presensi">Presensi</string>
    <string name="msg_rincian_pekerja">Rincian Pekerjaan</string>
    <string name="lbl_change_password">Change Password</string>
    <string name="msg_merupakan_platf">Merupakan platform aplikasi website mengenai Sistem Informasi Manajemen Pegawai Online. Aplikasi ini digunakan khusus untuk instansi BPMPK atau Balai Pengembangan Multimedia Pendidikan dan Kebudayaan untuk mengelola kinerja pegawai, input kegiatan harian, serta terdapat presensi kerja saat during maupun luring.</string>
    <string name="msg_2022_02_11_11_3">2022-02-11 11:31:39</string>
    <string name="lbl_pagi">Pagi</string>
    <string name="msg_kelurahan_pakin">Kelurahan Pakintelan, Kecamatan Gunung Pati</string>
    <string name="lbl_upload_keahlian">Upload Keahlian</string>
    <string name="lbl_nama_skp">Nama SKP</string>
    <string name="msg_kodya_semarang">Kodya Semarang 50227 | Jawa Tengah, Indonesia
        Telp 024-8314292 | Fax 024-8310051</string>
    <string name="lbl_nama">Nama</string>
    <string name="lbl_sign_up">Sign Up</string>
    <string name="lbl_terlambat">Terlambat</string>
    <string name="lbl_edit">Edit</string>
    <string name="lbl_edit_skp">Edit SKP</string>
    <string name="lbl_15">15</string>
    <string name="lbl_edit_profil">Edit Profil</string>
    <string name="lbl_file">File</string>
    <string name="lbl_81319263062">81319263062</string>
    <string name="msg_jalan_badak_iv">Jalan Badak IV 36, Semarang</string>
    <string name="lbl_6281319263062">+6281319263062</string>
    <string name="lbl">:</string>
    <string name="lbl_register">register</string>
    <string name="lbl_landing_page">landing_page</string>
    <string name="lbl_tanggal">Tanggal</string>
    <string name="lbl_nilai">Nilai</string>
    <string name="lbl_email">Email</string>
    <string name="msg_membuat_aplikas2">Membuat Aplikasi Kimia SMP</string>
    <string name="lbl_dashboard">Dashboard</string>
    <string name="lbl_1">1</string>
    <string name="lbl_metode_kerja">Metode Kerja</string>
    <string name="lbl_2">2</string>
    <string name="lbl_presensi2">presensi</string>
    <string name="lbl_nilai_skp2">nilai_skp</string>
    <string name="lbl_profil">Profil</string>
    <string name="lbl_login">login</string>
    <string name="lbl_rancangan_model">Rancangan Model</string>
    <string name="lbl_simpan">Simpan</string>
    <string name="lbl_kegiatan2">kegiatan</string>
    <string name="lbl_skp2">skp</string>
    <string name="lbl_mpnp1102220001">MPNP1102220001</string>
    <string name="lbl_februari">Februari</string>
    <string name="msg_enter_your_emai">Enter your email address and password to access admin panel.</string>
    <string name="lbl_nilai_skp">Nilai SKP</string>
    <string name="lbl_log_kegiatan2">log_kegiatan</string>
    <string name="lbl_lokasi">Lokasi</string>
    <string name="lbl_status">Status</string>
    <string name="lbl_alamat">Alamat</string>
    <string name="lbl_mpnp0903220001">MPNP0903220001</string>
    <string name="lbl_januari">Januari</string>
    <string name="lbl_kontak">kontak</string>
    <string name="lbl_selamat_datang">Selamat Datang,</string>
    <string name="lbl_tabel_skp">Tabel SKP</string>
    <string name="msg_this_contact_has_no_phone_nu">This contact has no phone number</string>
    <string name="arrowback">arrowback</string>
    <string name="userimage">userimage</string>
    <string name="logout">logout</string>
    <string name="icon_save">icon_save</string>
    <string name="icon_folder">icon_folder</string>
    <string name="icon_calendar">icon_calendar</string>
    <string name="icon_clipboard">icon_clipboard</string>
    <string name="icon_editprofil">icon_editprofil</string>
    <string name="icon_download">icon_download</string>
    <string name="splashscreen_logo">splashscreen_logo</string>
    <string name="splashcreen_bottom">splashcreen_bottom</string>
    <string name="splashscreen_top">splashscreen_top</string>
    <string name="icon_upload">icon_upload</string>
    <string name="icon_editpass">edit_pass</string>
    <string name="icon_tabelkeg">icon_tabelkeg</string>
    <string name="icon_logkeg">icon_logkeg</string>
    <string name="not_checked_menu">not_checked_menu</string>
    <string name="checked_menu">checked_menu</string>
    <string name="icon_pengajuanskp">icon_pengajuanskp</string>
    <string name="icon_tabelskp">icon_tabelskp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="membuat_aplikasi_mobile">Membuat Aplikasi Mobile</string>
    <string name="selected_item">Selected Item</string>
    <string name="login_logo">login_logo</string>
    <string name="exclamation">!</string>
    <string name="colon">:</string>
    <string name="change_image">Change Image</string>
    <string name="pilih_tanggal">Pilih Tanggal</string>
    <string name="lbl_id_skp">ID SKP</string>
    <string name="lbl_edit_pengajuan_skp">Edit Pengajuan SKP</string>
    <string name="lbl_status_validasi">Status Validasi</string>
    <string name="lbl_sedang_proses">Sedang Proses</string>
    <string name="data_tidak_ditemukan">Data Tidak Ditemukan</string>
    <string name="xxxxxxxxxxx">xxxxxxxxxxx</string>
    <string name="lbl_upload_foto">Upload Foto</string>
    <string name="lbl_upload_file">Upload File</string>
    <string name="lbl_tabel_log_kegiatan">Tabel Log Kegiatan</string>
    <string name="lbl_kegiatan_id">Kegiatan ID</string>
    <string name="msg_uraian">Uraian</string>
    <string name="lbl_word">Word</string>
    <string name="lbl_file_categories">Kategori File</string>
    <string name="lbl_tanpa_skp">Tanpa SKP</string>
    <string name="lbl_dengan_skp">Dengan SKP</string>
    <string name="lbl_edit_logkeg">Edit Log Kegiatan</string>
    <string name="icon_jamdatang">icon_jamdatang</string>
    <string name="icon_jampulang">icon_jampulang</string>
    <string name="icon_presensi">icon_presensi</string>
    <string name="icon_tabelpresensi">icon_tabelpresensi</string>
    <string name="lbl_date">Date</string>
    <string name="lbl_latitude">Latitude</string>
    <string name="lbl_longitude">Longitude</string>
    <string name="lbl_cek_presensi">Cek Presensi</string>
    <string name="slash">/</string>
    <string name="lbl_detail">Detail</string>
    <string name="lbl_detail_skp">Detail SKP</string>
    <string name="lbl_detail_kegiatan">Detail Kegiatan</string>

</resources>
